syntax = "proto3";
package pb.network.protocol;

option go_package = "github.com/weisyn/v1/pb/network/protocol";

import "pb/blockchain/block/block.proto";

/**
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * ğŸ”„ WESåŒºå—åŒæ­¥ç½‘ç»œåè®® - K-bucketæ™ºèƒ½åŒæ­¥æ¶æ„
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 *
 * æœ¬åè®®å®šä¹‰WESç³»ç»Ÿä¸­åŒºå—çš„ç½‘ç»œåŒæ­¥æœºåˆ¶ï¼Œå®ç°é«˜æ•ˆã€æ™ºèƒ½çš„åŒºå—é“¾æ•°æ®åŒæ­¥ã€‚
 *
 * ğŸ¯ æ ¸å¿ƒæ¶æ„ï¼š
 * â€¢ K-bucketèŠ‚ç‚¹é€‰æ‹©ï¼šåŸºäºKademliaè·ç¦»çš„ç®—æ³•åŒ–èŠ‚ç‚¹é€‰æ‹©
 * â€¢ æ™ºèƒ½åˆ†é¡µç­–ç•¥ï¼šæ¥æ”¶æ–¹æ§åˆ¶çš„åŠ¨æ€åˆ†é¡µæœºåˆ¶
 * â€¢ åŒæ­¥æ—¶æœºæ§åˆ¶ï¼šå¯åŠ¨å³åŒæ­¥ã€å®šæ—¶æ£€æŸ¥ã€å¼‚å¸¸æ¢å¤
 * â€¢ é‡è¯•æœºåˆ¶ï¼šèŠ‚ç‚¹å¤±è´¥æ—¶çš„è‡ªåŠ¨åˆ‡æ¢å’Œæ¢¯åº¦é€€é¿
 *
 * ğŸ“¡ åè®®æ˜ å°„ï¼š
 * â€¢ K-bucketåŒæ­¥ï¼š/weisyn/sync/kbucket/1.0.0
 * â€¢ æ™ºèƒ½åˆ†é¡µï¼š/weisyn/sync/range_paginated/1.0.0
 * â€¢ èŠ‚ç‚¹é€‰æ‹©ï¼šå†…åµŒåœ¨K-bucketåŒæ­¥æµç¨‹ä¸­
 * â€¢ æ¶ˆæ¯å°è£…ï¼šä½¿ç”¨ pb/network/envelope.proto ä½œä¸ºä¼ è¾“å®¹å™¨
 *
 * ğŸ›¡ï¸ ç½‘ç»œä¼˜åŒ–ï¼š
 * â€¢ è·¯ç”±é”®æœºåˆ¶ï¼šåŸºäºçˆ¶åŒºå—å“ˆå¸Œè®¡ç®—æœ€ä¼˜è·¯ç”±è·¯å¾„
 * â€¢ ç½‘ç»œé™åˆ¶æ„ŸçŸ¥ï¼šæ ¹æ®å¸¦å®½å’ŒåŒºå—å¤§å°åŠ¨æ€è°ƒæ•´ä¼ è¾“é‡
 * â€¢ æœ€å°ä¿éšœåŸåˆ™ï¼šè‡³å°‘è¿”å›1ä¸ªåŒºå—ï¼Œç¡®ä¿åŒæ­¥è¿›å±•
 * â€¢ æ€§èƒ½ç›‘æ§ï¼šå®æ—¶ç»Ÿè®¡åŒæ­¥æ•ˆæœå’Œç½‘ç»œå¥åº·åº¦
 *
 * ğŸ”„ äº¤äº’æµç¨‹ï¼š
 * 1. å¯åŠ¨åŒæ­¥ â†’ K-bucketèŠ‚ç‚¹é€‰æ‹© â†’ å‘é€åŒæ­¥è¯·æ±‚
 * 2. æ¥æ”¶æ–¹è¯„ä¼° â†’ æ™ºèƒ½åˆ†é¡µå¤„ç† â†’ è¿”å›åŒºå—æ‰¹æ¬¡
 * 3. è¯·æ±‚æ–¹éªŒè¯ â†’ å­˜å‚¨åŒºå— â†’ ç»§ç»­æˆ–å®ŒæˆåŒæ­¥
 * 4. å¼‚å¸¸å¤„ç† â†’ èŠ‚ç‚¹åˆ‡æ¢ â†’ é‡è¯•æœºåˆ¶å¯åŠ¨
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 */

/**
 * ChainIdentity - é“¾èº«ä»½æ ‡è¯†
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šåœ¨æ‰€æœ‰è·¨èŠ‚ç‚¹é€šä¿¡ä¸­æ˜ç¡®æ ‡è¯†"è¿™æ˜¯ä¸æ˜¯åŒä¸€æ¡é“¾"
 *
 * åŒ…å«é“¾çš„æ ¸å¿ƒæ ‡è¯†ä¿¡æ¯ï¼Œç”¨äºé˜²æ­¢ä¸²é“¾æ”»å‡»å’Œé”™è¯¯é…ç½®ã€‚
 * æ¥æ”¶æ–¹å¿…é¡»éªŒè¯è¯·æ±‚çš„é“¾èº«ä»½æ˜¯å¦ä¸æœ¬åœ°åŒ¹é…ï¼Œä¸åŒ¹é…åˆ™æ‹’ç»è¯·æ±‚ã€‚
 */
message ChainIdentity {
  string chain_id = 1;           // é“¾IDï¼ˆæ•°å­—å­—ç¬¦ä¸²æˆ–åå…­è¿›åˆ¶ï¼‰
  string network_namespace = 2;  // ç½‘ç»œå‘½åç©ºé—´ï¼ˆå¦‚ "mainnet-public", "test-consortium"ï¼‰
  string network_id = 3;         // ç½‘ç»œæ ‡è¯†ç¬¦ï¼ˆå¦‚ "WES_mainnet_2025"ï¼‰
  string chain_mode = 4;         // é“¾æ¨¡å¼ï¼špublic | consortium | private
  string genesis_hash = 5;       // åˆ›ä¸–åŒºå—å“ˆå¸Œï¼ˆåå…­è¿›åˆ¶å­—ç¬¦ä¸²ï¼Œ32å­—èŠ‚ï¼‰
  string version_tag = 6;        // ç‰ˆæœ¬æ ‡ç­¾ï¼ˆå¯é€‰ï¼Œå¦‚ "v1", "v1.1-hotfix"ï¼‰
}

/**
 * KBucketSyncRequest - K-bucketæ™ºèƒ½åŒæ­¥è¯·æ±‚
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šåŸºäºKademliaè·ç¦»ç®—æ³•é€‰æ‹©æœ€ä¼˜åŒæ­¥èŠ‚ç‚¹
 *
 * ğŸ”— èŠ‚ç‚¹é€‰æ‹©æœºåˆ¶ï¼š
 * - è·¯ç”±é”®ç”Ÿæˆï¼šä½¿ç”¨çˆ¶åŒºå—å“ˆå¸Œï¼ˆæˆ–é»˜è®¤å€¼ï¼‰ä½œä¸ºè·¯ç”±é”®
 * - è·ç¦»è®¡ç®—ï¼šrouting_key XOR peer_node_idï¼Œé€‰æ‹©è·ç¦»æœ€å°çš„èŠ‚ç‚¹
 * - è¿‘é‚»ä¼˜é€‰ï¼šä»K-bucketä¸­é€‰æ‹©æœ€è¿‘çš„8ä¸ªèŠ‚ç‚¹ä½œä¸ºå€™é€‰
 * - å¹¶å‘å°è¯•ï¼šåŒæ—¶å‘å¤šä¸ªè¿‘é‚»èŠ‚ç‚¹å‘èµ·åŒæ­¥è¯·æ±‚
 *
 * ğŸ”„ åŒæ­¥æµç¨‹ï¼š
 * 1. è¯·æ±‚æ–¹è®¡ç®—è·¯ç”±é”®ï¼ˆé€šå¸¸æ˜¯æœ¬åœ°æœ€æ–°åŒºå—çš„å“ˆå¸Œï¼‰
 * 2. æŸ¥è¯¢K-bucketï¼Œè·å–è·ç¦»æœ€è¿‘çš„èŠ‚ç‚¹åˆ—è¡¨
 * 3. å‘é€KBucketSyncRequeståˆ°é€‰ä¸­çš„èŠ‚ç‚¹
 * 4. æ¥æ”¶æ–¹æ£€æŸ¥é«˜åº¦å·®å¼‚ï¼Œå†³å®šæ˜¯å¦æä¾›åŒºå—æ•°æ®
 * 5. å¦‚è¯·æ±‚å¤±è´¥ï¼Œè‡ªåŠ¨é€‰æ‹©ä¸‹ä¸€æ‰¹è¿‘é‚»èŠ‚ç‚¹é‡è¯•
 *
 * ğŸ›¡ï¸ é“¾èº«ä»½éªŒè¯ï¼š
 * - è¯·æ±‚å¿…é¡»æºå¸¦ chain_identity å­—æ®µ
 * - æ¥æ”¶æ–¹é¦–å…ˆéªŒè¯ chain_identity æ˜¯å¦ä¸æœ¬åœ°åŒ¹é…
 * - ä¸åŒ¹é…åˆ™æ‹’ç»è¯·æ±‚ï¼Œé¿å…ä¸²é“¾æ”»å‡»
 *
 * ğŸ“ ä½¿ç”¨ç¤ºä¾‹ï¼š
 * kbucket_sync_request {
 *   request_id: "sync_001"
 *   local_height: 12345
 *   routing_key: sha256(local_latest_block_hash)  // åŸºäºæœ¬åœ°æœ€æ–°åŒºå—è®¡ç®—
 *   max_response_size: 5242880  // 5MBé™åˆ¶
 *   requester_peer_id: "QmXXXXX..."
 *   chain_identity: {
 *     chain_id: "12345"
 *     network_namespace: "mainnet-public"
 *     chain_mode: "public"
 *     genesis_hash: "abcd1234..."
 *   }
 * }
 */
message KBucketSyncRequest {
  string request_id = 1;                         // è¯·æ±‚å”¯ä¸€æ ‡è¯†ç¬¦
  uint64 local_height = 2;                      // æœ¬åœ°åŒºå—é“¾é«˜åº¦
  bytes routing_key = 3;                        // è·¯ç”±é”®ï¼ˆç”¨äºK-bucketè·ç¦»è®¡ç®—ï¼‰
                                                // é€šå¸¸ä½¿ç”¨çˆ¶åŒºå—å“ˆå¸Œï¼Œç©ºå€¼æ—¶ä½¿ç”¨é»˜è®¤è·¯ç”±é”®
  uint32 max_response_size = 4;                 // æœŸæœ›çš„æœ€å¤§å“åº”å¤§å°ï¼ˆå­—èŠ‚ï¼‰
                                                // æ¥æ”¶æ–¹æ ¹æ®æ­¤å€¼è¿›è¡Œæ™ºèƒ½åˆ†é¡µ
  bytes requester_peer_id = 5;                 // è¯·æ±‚è€…èŠ‚ç‚¹ID

  // åŒæ­¥ä¸Šä¸‹æ–‡  
  optional uint64 target_height = 11;           // ç›®æ ‡åŒæ­¥é«˜åº¦ï¼ˆå¯é€‰ï¼Œ0è¡¨ç¤ºåŒæ­¥åˆ°æœ€æ–°ï¼‰

  // é“¾èº«ä»½éªŒè¯ï¼ˆæ–°å¢ï¼‰
  ChainIdentity chain_identity = 12;           // è¯·æ±‚æ–¹çš„é“¾èº«ä»½æ ‡è¯†ï¼ˆç”¨äºé˜²æ­¢ä¸²é“¾ï¼‰
}

/**
 * IntelligentPaginationResponse - æ™ºèƒ½åˆ†é¡µåŒæ­¥å“åº”
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šæ¥æ”¶æ–¹æ ¹æ®ç½‘ç»œçŠ¶å†µå’ŒåŒºå—å¤§å°æ™ºèƒ½åˆ†é¡µè¿”å›æ•°æ®
 *
 * ğŸ”§ æ™ºèƒ½åˆ†é¡µé€»è¾‘ï¼š
 * - è¯·æ±‚è§£æï¼šæ¥æ”¶æ–¹åˆ†æè¯·æ±‚çš„é«˜åº¦èŒƒå›´å’Œå¤§å°é™åˆ¶
 * - åŒºå—è¯„ä¼°ï¼šè®¡ç®—æ¯ä¸ªåŒºå—çš„åºåˆ—åŒ–å¤§å°
 * - åˆ†é¡µå†³ç­–ï¼šåœ¨ç½‘ç»œé™åˆ¶å†…é€‰æ‹©æœ€ä¼˜çš„åŒºå—æ•°é‡
 * - æœ€å°ä¿éšœï¼šå³ä½¿å•ä¸ªåŒºå—è¶…è¿‡é™åˆ¶ï¼Œä¹Ÿè‡³å°‘è¿”å›1ä¸ªåŒºå—
 *
 * ğŸ“Š åˆ†é¡µç­–ç•¥ï¼š
 * - ç½‘ç»œé™åˆ¶ä¼˜å…ˆï¼šæ ¹æ®max_response_sizeè¿›è¡Œç¡¬é™åˆ¶
 * - åŒºå—å®Œæ•´æ€§ï¼šä¸ä¼šæˆªæ–­å•ä¸ªåŒºå—ï¼Œä¿è¯åŒºå—å®Œæ•´ä¼ è¾“
 * - æ‰¹æ¬¡ä¼˜åŒ–ï¼šä¼˜å…ˆé€‰æ‹©èƒ½å¤Ÿå¡«æ»¡ç½‘ç»œé™åˆ¶çš„åŒºå—æ‰¹æ¬¡
 * - å»¶è¿Ÿä¼˜åŒ–ï¼šé¿å…è¿‡å°æ‰¹æ¬¡å¯¼è‡´çš„å¾€è¿”å»¶è¿Ÿ
 *
 * ğŸ›¡ï¸ é“¾èº«ä»½éªŒè¯ï¼š
 * - å“åº”å¯é€‰æºå¸¦ chain_identity å­—æ®µï¼ˆç”¨äºå“åº”ç«¯å†æ ¡éªŒï¼‰
 * - è¯·æ±‚æ–¹å¯ä»¥éªŒè¯å“åº”çš„é“¾èº«ä»½æ˜¯å¦ä¸è¯·æ±‚åŒ¹é…
 *
 * ğŸ“ ä½¿ç”¨ç¤ºä¾‹ï¼š
 * intelligent_pagination_response {
 *   request_id: "sync_001"
 *   blocks: [block_12346, block_12347, block_12348]
 *   next_height: 12349
 *   has_more: true
 *   actual_size: 4194304  // å®é™…è¿”å›4MBæ•°æ®
 *   pagination_reason: "NETWORK_SIZE_LIMIT"
 *   chain_identity: {
 *     chain_id: "12345"
 *     network_namespace: "mainnet-public"
 *     chain_mode: "public"
 *     genesis_hash: "abcd1234..."
 *   }
 * }
 *
 * ğŸ”„ åˆ†é¡µæµç¨‹ï¼š
 * 1. æ¥æ”¶æ–¹æ”¶åˆ°KBucketSyncRequest
 * 2. æ£€æŸ¥æœ¬åœ°é«˜åº¦æ˜¯å¦é«˜äºè¯·æ±‚æ–¹é«˜åº¦
 * 3. è®¡ç®—éœ€è¦åŒæ­¥çš„åŒºå—èŒƒå›´ï¼š[local_height+1, remote_height]
 * 4. ä»èµ·å§‹é«˜åº¦å¼€å§‹ï¼Œé€ä¸ªç´¯åŠ åŒºå—å¤§å°
 * 5. å½“ç´¯ç§¯å¤§å°æ¥è¿‘max_response_sizeæ—¶åœæ­¢
 * 6. è¿”å›å½“å‰æ‰¹æ¬¡ï¼Œå¹¶æŒ‡ç¤ºæ˜¯å¦è¿˜æœ‰æ›´å¤šæ•°æ®
 */
message IntelligentPaginationResponse {
  string request_id = 1;                        // å¯¹åº”è¯·æ±‚ID
  repeated pb.blockchain.core.Block blocks = 2; // å½“å‰æ‰¹æ¬¡çš„åŒºå—åˆ—è¡¨
  uint64 next_height = 3;                       // ä¸‹æ¬¡è¯·æ±‚åº”è¯¥ä½¿ç”¨çš„èµ·å§‹é«˜åº¦
  bool has_more = 4;                            // æ˜¯å¦è¿˜æœ‰æ›´å¤šæ•°æ®å¾…ä¼ è¾“
  uint32 actual_size = 5;                       // å®é™…è¿”å›çš„æ•°æ®å¤§å°ï¼ˆå­—èŠ‚ï¼‰
  string pagination_reason = 6;                 // åˆ†é¡µåŸå› è¯´æ˜

  // é”™è¯¯å¤„ç†
  bool success = 30;                            // å¤„ç†æ˜¯å¦æˆåŠŸ
  optional string error_message = 31;           // é”™è¯¯ä¿¡æ¯ï¼ˆå¤±è´¥æ—¶ï¼‰

  // é“¾èº«ä»½éªŒè¯ï¼ˆæ–°å¢ï¼Œå¯é€‰ï¼‰
  optional ChainIdentity chain_identity = 32;   // å“åº”æ–¹çš„é“¾èº«ä»½æ ‡è¯†ï¼ˆç”¨äºå“åº”ç«¯å†æ ¡éªŒï¼‰
}

/**
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * ğŸ”„ WES åŒºå—åŒæ­¥ç½‘ç»œåè®® - Sync v2ï¼ˆfork-aware + locatorï¼‰
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 *
 * è®¾è®¡ç›®æ ‡ï¼šä»æ ¹æœ¬ä¸Šé¿å…â€œæŒ‰é«˜åº¦ç›²æ‹‰â€å¯¼è‡´çš„åˆ†å‰é“¾å—æ— æ³•éªŒè¯ä¸å¡æ­»ã€‚
 *
 * åè®®æ˜ å°„ï¼ˆv2 ç¡¬åˆ‡ï¼Œä¸å‘åå…¼å®¹ï¼‰ï¼š
 * - SyncHelloV2ï¼š/weisyn/sync/hello/2.0.0
 * - SyncBlocksV2ï¼š/weisyn/sync/blocks/2.0.0
 */

// BlockLocatorEntry ç”¨äºå¿«é€Ÿå¯»æ‰¾å…±åŒç¥–å…ˆï¼ˆæºå¸¦ height + hashï¼Œé¿å…ä¾èµ– hash->height ç´¢å¼•ï¼‰ã€‚
message BlockLocatorEntry {
  uint64 height = 1;        // åŒºå—é«˜åº¦
  bytes block_hash = 2;     // è¯¥é«˜åº¦çš„åŒºå—å“ˆå¸Œï¼ˆ32 bytesï¼‰
}

// BlockLocator ä» tip å¾€å‰æŠ½æ ·çš„ä¸€ç»„ (height, hash)ï¼ˆä¾‹å¦‚ tip, tip-1, tip-2, tip-4, ...ï¼‰
message BlockLocator {
  repeated BlockLocatorEntry entries = 1;
}

// SyncRelationship èŠ‚ç‚¹é—´é“¾å…³ç³»åˆ¤å®šç»“æœï¼ˆç”¨äºæŒ‡å¯¼ä¸‹ä¸€æ­¥åŠ¨ä½œï¼‰
enum SyncRelationship {
  SYNC_RELATIONSHIP_UNSPECIFIED = 0;
  UP_TO_DATE = 1;               // é«˜åº¦ä¸ hash ä¸€è‡´ï¼Œæ— éœ€åŒæ­¥
  REMOTE_BEHIND = 2;            // å¯¹ç«¯é«˜åº¦è½åæˆ‘æ–¹ï¼ˆå¯¹ç«¯åº”è‡ªåŒæ­¥ï¼‰
  REMOTE_AHEAD_SAME_CHAIN = 3;  // å¯¹ç«¯é¢†å…ˆï¼Œä¸”åœ¨æˆ‘æ–¹ tip_height å¤„ hash ä¸€è‡´ï¼ˆå¯å®‰å…¨æ‹‰åç»­ï¼‰
  FORK_DETECTED = 4;            // åŒé«˜åº¦ hash ä¸ä¸€è‡´ï¼ˆåˆ†å‰ï¼Œéœ€è¦ reorg æˆ–å›é€€æ‰¾å…±åŒç¥–å…ˆï¼‰
  UNKNOWN = 5;                  // æ— æ³•åˆ¤æ–­ï¼ˆä¾‹å¦‚ locator å¤ªçŸ­æˆ–æœ¬åœ°ç¼ºå—ï¼‰
}

// SyncHelloV2Requestï¼šåŒæ­¥æ¡æ‰‹ï¼ˆæºå¸¦é«˜åº¦+å“ˆå¸Œ+locatorï¼‰ï¼Œç”¨äºåˆ¤å®šå…³ç³»ä¸å…±åŒç¥–å…ˆã€‚
message SyncHelloV2Request {
  string request_id = 1;            // è¯·æ±‚å”¯ä¸€æ ‡è¯†ç¬¦
  ChainIdentity chain_identity = 2; // é“¾èº«ä»½ï¼ˆå¿…é¡»æ ¡éªŒï¼‰

  uint64 local_tip_height = 10;     // è¯·æ±‚æ–¹é“¾å°–é«˜åº¦
  bytes local_tip_hash = 11;        // è¯·æ±‚æ–¹é“¾å°–å“ˆå¸Œï¼ˆ32 bytesï¼‰

  BlockLocator locator = 20;        // ç”¨äºå¯»æ‰¾å…±åŒç¥–å…ˆ
  uint32 max_response_size = 30;    // æœåŠ¡ç«¯å¯å‚è€ƒè¯¥å€¼å†³å®šå“åº”è´Ÿè½½ä¸Šé™ï¼ˆå­—èŠ‚ï¼‰
}

// SyncHelloV2Responseï¼šè¿”å›å…³ç³»åˆ¤å®šã€å¯¹ç«¯é“¾å°–ã€å…±åŒç¥–å…ˆï¼ˆè‹¥å¯ç¡®å®šï¼‰ã€‚
message SyncHelloV2Response {
  string request_id = 1;
  bool success = 2;
  optional string error_message = 3;

  optional ChainIdentity chain_identity = 4; // å“åº”ç«¯é“¾èº«ä»½ï¼ˆå¯é€‰ï¼Œä¾¿äºè¯·æ±‚ç«¯ double-checkï¼‰

  uint64 remote_tip_height = 10;
  bytes remote_tip_hash = 11;

  SyncRelationship relationship = 20;

  // è‹¥ç¡®å®šå…±åŒç¥–å…ˆï¼Œåˆ™å¡«å……ï¼›å¦åˆ™ä¸º 0/ç©º
  uint64 common_ancestor_height = 30;
  bytes common_ancestor_hash = 31;

  // å¯¹è¯·æ±‚æ–¹çš„ä¸‹ä¸€æ­¥å»ºè®®ï¼ˆå¯é€‰ï¼Œè¯Šæ–­å‹å¥½ï¼‰
  optional string recommendation = 40;
}

// SyncBlocksV2Requestï¼šåœ¨ç¡®è®¤åŒé“¾å¯çº¿æ€§åŒæ­¥åï¼ŒæŒ‰é«˜åº¦èŒƒå›´æ‹‰å–åŒºå—æ‰¹æ¬¡ã€‚
message SyncBlocksV2Request {
  string request_id = 1;
  ChainIdentity chain_identity = 2;

  uint64 from_height = 10;       // èµ·å§‹é«˜åº¦ï¼ˆåŒ…å«ï¼‰
  uint64 to_height = 11;         // ç»“æŸé«˜åº¦ï¼ˆåŒ…å«ï¼‰

  // å¯é€‰ï¼šè¯·æ±‚æ–¹æœŸæœ›çš„ parent hashï¼Œç”¨äºæœåŠ¡ç«¯å¿«é€Ÿ sanity-check â€œæ˜¯å¦è¿åœ¨ä¸€èµ·â€
  optional bytes expected_parent_hash = 20;

  uint32 max_response_size = 30; // å“åº”å¤§å°ä¸Šé™ï¼ˆå­—èŠ‚ï¼‰
}

// SyncBlocksV2Responseï¼šè¿”å› blocks + next_heightï¼Œå¹¶å¯æºå¸¦å…³ç³»/ç¥–å…ˆä¿¡æ¯ç”¨äºé”™è¯¯å½’å› ã€‚
message SyncBlocksV2Response {
  string request_id = 1;
  bool success = 2;
  optional string error_message = 3;

  repeated pb.blockchain.core.Block blocks = 10;
  uint64 next_height = 11;
  bool has_more = 12;
  uint32 actual_size = 13;

  // è‹¥æœåŠ¡ç«¯å‘ç°åˆ†å‰æˆ–æ— æ³•çº¿æ€§è¿”å›ï¼Œå¯å›ä¼ å…³ç³»ä¸ç¥–å…ˆä¿¡æ¯
  SyncRelationship relationship = 20;
  uint64 remote_tip_height = 21;
  bytes remote_tip_hash = 22;
  uint64 common_ancestor_height = 23;
  bytes common_ancestor_hash = 24;
}

