// handle_block_submission.go
// åŒºå—æäº¤åè®®å¤„ç†å™¨ï¼ˆç®€åŒ–ç‰ˆï¼‰
//
// ğŸ“ **ç®€åŒ–è®¾è®¡åŸåˆ™**ï¼š
// ç½‘ç»œå±‚åªè´Ÿè´£åè®®è½¬æ¢å’ŒåŸºæœ¬è·¯ç”±ï¼Œä¸å†è¿›è¡Œä¸šåŠ¡éªŒè¯å’Œå­˜å‚¨æ“ä½œã€‚
// æ‰€æœ‰çš„éªŒè¯ã€å­˜å‚¨ã€è¯„ä¼°ã€é€‰æ‹©ç­‰ä¸šåŠ¡é€»è¾‘ç”±èšåˆæ§åˆ¶å™¨ç»Ÿä¸€å¤„ç†ã€‚
//
// ğŸ”„ **ç®€åŒ–åçš„å¤„ç†æµç¨‹**ï¼š
// 1. ååºåˆ—åŒ–ç½‘ç»œåè®®æ¶ˆæ¯ï¼ˆMinerBlockSubmissionï¼‰
// 2. åŸºæœ¬æ¶ˆæ¯æ ¼å¼æ£€æŸ¥ï¼ˆéç©ºå­—æ®µéªŒè¯ï¼‰
// 3. èšåˆèŠ‚ç‚¹é€‰ä¸¾åˆ¤æ–­ï¼ˆåŸºäºKademliaè·ç¦»ï¼‰
// 4. éèšåˆèŠ‚ç‚¹ï¼šè½¬å‘ç»™æ­£ç¡®çš„èšåˆèŠ‚ç‚¹
// 5. èšåˆèŠ‚ç‚¹ï¼šç›´æ¥è°ƒç”¨ ProcessAggregationRound ç»Ÿä¸€å¤„ç†
//
// âœ… **ç§»é™¤çš„å¤æ‚é€»è¾‘**ï¼š
// - ä¸¥æ ¼é«˜åº¦æ ¡éªŒï¼ˆç§»åŠ¨åˆ°èšåˆæ§åˆ¶å™¨ï¼‰
// - å€™é€‰åŒºå—åŸºç¡€æ ¡éªŒï¼ˆç§»åŠ¨åˆ°èšåˆæ§åˆ¶å™¨ï¼‰
// - å€™é€‰æ± ç›´æ¥å­˜å‚¨ï¼ˆç§»åŠ¨åˆ°èšåˆæ§åˆ¶å™¨ï¼‰
// - å¤æ‚çš„é”™è¯¯å¤„ç†å’ŒçŠ¶æ€ç®¡ç†ï¼ˆç»Ÿä¸€åˆ°èšåˆæ§åˆ¶å™¨ï¼‰
//
// ğŸ¯ **è®¾è®¡ä¼˜åŠ¿**ï¼š
// - èŒè´£å•ä¸€ï¼šç½‘ç»œå±‚ä¸“æ³¨åè®®è½¬æ¢ï¼Œä¸šåŠ¡å±‚ä¸“æ³¨é€»è¾‘å¤„ç†
// - é”™è¯¯å¤„ç†ç®€åŒ–ï¼šç»Ÿä¸€åœ¨èšåˆæ§åˆ¶å™¨ä¸­å¤„ç†å„ç§å¼‚å¸¸æƒ…å†µ
// - æµ‹è¯•å‹å¥½ï¼šå‡å°‘ç½‘ç»œå±‚çš„å¤æ‚æ€§ï¼Œæé«˜å¯æµ‹è¯•æ€§
// - ç»´æŠ¤æ€§æ›´å¥½ï¼šä¸šåŠ¡é€»è¾‘é›†ä¸­åœ¨ä¸€ä¸ªåœ°æ–¹ï¼Œæ›´å®¹æ˜“ç†è§£å’Œä¿®æ”¹
//
// ä½œè€…ï¼šWESå¼€å‘å›¢é˜Ÿ
// åˆ›å»ºæ—¶é—´ï¼š2025-09-13
// ç®€åŒ–æ—¶é—´ï¼š2025-09-14

package network_handler

import (
	"context"
	"fmt"
	"time"

	"github.com/libp2p/go-libp2p/core/peer"
	"github.com/weisyn/v1/internal/core/consensus/interfaces"
	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pb/network/protocol"
	"github.com/weisyn/v1/pkg/interfaces/blockchain"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/node"
	"github.com/weisyn/v1/pkg/interfaces/mempool"
	netiface "github.com/weisyn/v1/pkg/interfaces/network"
	"google.golang.org/protobuf/proto"
)

// blockSubmissionHandler åŒºå—æäº¤å¤„ç†å™¨
type blockSubmissionHandler struct {
	logger          log.Logger
	electionService interfaces.AggregatorElection
	chainService    blockchain.ChainService
	candidatePool   mempool.CandidatePool
	host            node.Host
	netService      netiface.Network
	controller      interfaces.AggregatorController
	syncService     blockchain.SystemSyncService // æ·»åŠ åŒæ­¥æœåŠ¡å­—æ®µ
}

// newBlockSubmissionHandler åˆ›å»ºåŒºå—æäº¤å¤„ç†å™¨
func newBlockSubmissionHandler(
	logger log.Logger,
	electionService interfaces.AggregatorElection,
	chainService blockchain.ChainService,
	candidatePool mempool.CandidatePool,
	host node.Host,
	netService netiface.Network,
	controller interfaces.AggregatorController,
	syncService blockchain.SystemSyncService, // æ·»åŠ åŒæ­¥æœåŠ¡å‚æ•°
) *blockSubmissionHandler {
	return &blockSubmissionHandler{
		logger:          logger,
		electionService: electionService,
		chainService:    chainService,
		candidatePool:   candidatePool,
		host:            host,
		netService:      netService,
		controller:      controller,
		syncService:     syncService, // åˆå§‹åŒ–åŒæ­¥æœåŠ¡
	}
}

// handleMinerBlockSubmission å¤„ç†çŸ¿å·¥åŒºå—æäº¤
//
// ğŸ¯ **æç®€ç½‘ç»œå±‚è®¾è®¡**ï¼š
// ç½‘ç»œå±‚åªè´Ÿè´£åè®®è½¬æ¢ï¼Œä¸åšä»»ä½•ä¸šåŠ¡åˆ¤æ–­ï¼š
// 1. ååºåˆ—åŒ–ç½‘ç»œåè®®æ¶ˆæ¯
// 2. åŸºæœ¬æ¶ˆæ¯æ ¼å¼æ£€æŸ¥ï¼ˆåè®®å®‰å…¨è¦æ±‚ï¼‰
// 3. ç›´æ¥è°ƒç”¨ ProcessAggregationRound ç»Ÿä¸€å¤„ç†
//
// âŒ **ç§»é™¤çš„è¶Šç•Œé€»è¾‘**ï¼š
// - èšåˆèŠ‚ç‚¹é€‰ä¸¾åˆ¤æ–­ï¼ˆåº”åœ¨ ProcessAggregationRound å†…éƒ¨ï¼‰
// - åŒºå—è½¬å‘é€»è¾‘ï¼ˆåº”åœ¨ ProcessAggregationRound å†…éƒ¨ï¼‰
// - å¤æ‚çš„é”™è¯¯åˆ†æ”¯å¤„ç†ï¼ˆç»Ÿä¸€åˆ°ä¸šåŠ¡å±‚ï¼‰
func (h *blockSubmissionHandler) handleMinerBlockSubmission(ctx context.Context, from peer.ID, reqBytes []byte) ([]byte, error) {
	h.logger.Info("ç½‘ç»œå±‚æ¥æ”¶åŒºå—æäº¤ - ç›´æ¥è½¬å‘ç»™èšåˆæ§åˆ¶å™¨")

	// ååºåˆ—åŒ–åè®®æ¶ˆæ¯
	var submission protocol.MinerBlockSubmission
	if err := proto.Unmarshal(reqBytes, &submission); err != nil {
		// ğŸ” è¯¦ç»†åºåˆ—åŒ–è°ƒè¯•ä¿¡æ¯
		h.logger.Errorf("ğŸš« MinerBlockSubmissionååºåˆ—åŒ–å¤±è´¥ - from=%s, size=%d, error=%v", from.String(), len(reqBytes), err)
		// å®‰å…¨æ˜¾ç¤ºåºåˆ—åŒ–æ•°æ®å‰32å­—èŠ‚
		displayLen := 32
		if len(reqBytes) < 32 {
			displayLen = len(reqBytes)
		}
		if displayLen > 0 {
			h.logger.Debugf("ğŸ’¾ åºåˆ—åŒ–æ•°æ®å‰%då­—èŠ‚: %x", displayLen, reqBytes[:displayLen])
		}
		return h.buildRejectionResponse("invalid message format", ""), nil
	}

	// ğŸ” æˆåŠŸååºåˆ—åŒ–çš„è°ƒè¯•ä¿¡æ¯
	blockHeight := uint64(0)
	if submission.CandidateBlock != nil && submission.CandidateBlock.Header != nil {
		blockHeight = submission.CandidateBlock.Header.Height
	}
	h.logger.Debugf("âœ… MinerBlockSubmissionååºåˆ—åŒ–æˆåŠŸ - from=%s, height=%d, size=%d", from.String(), blockHeight, len(reqBytes))

	// åŸºæœ¬æ¶ˆæ¯æ ¼å¼æ£€æŸ¥ï¼ˆåè®®å®‰å…¨è¦æ±‚ï¼‰
	if submission.Base == nil || submission.CandidateBlock == nil {
		return h.buildRejectionResponse("missing required fields", submission.Base.MessageId), nil
	}

	// é“¾IDå®‰å…¨éªŒè¯ï¼ˆé˜²æ­¢è·¨é“¾æ”»å‡»ï¼‰
	if err := h.validateBlockChainId(submission.CandidateBlock); err != nil {
		h.logger.Warnf("æ‹’ç»åŒºå—æäº¤ - é“¾IDéªŒè¯å¤±è´¥: %v", err)
		return h.buildRejectionResponse(fmt.Sprintf("invalid chain ID: %v", err), submission.Base.MessageId), nil
	}

	// ç›´æ¥è°ƒç”¨èšåˆæ§åˆ¶å™¨ç»Ÿä¸€å¤„ç†
	// èšåˆæ§åˆ¶å™¨å†…éƒ¨å°†å¤„ç†ï¼šé€‰ä¸¾åˆ¤æ–­ã€éªŒè¯ã€å­˜å‚¨ã€è½¬å‘ã€è¯„ä¼°ã€é€‰æ‹©ã€åˆ†å‘
	if err := h.controller.ProcessAggregationRound(ctx, submission.CandidateBlock); err != nil {
		return h.buildRejectionResponse(fmt.Sprintf("aggregation processing failed: %v", err), submission.Base.MessageId), nil
	}

	// è¿”å›æ¥å—å“åº”
	return h.buildAcceptanceResponse("block accepted by aggregation controller", submission.Base.MessageId), nil
}

// validateBlockHeight éªŒè¯åŒºå—é«˜åº¦
func (h *blockSubmissionHandler) validateBlockHeight(ctx context.Context, blockHeight uint64) error {
	// è·å–å½“å‰é“¾çŠ¶æ€
	chainInfo, err := h.chainService.GetChainInfo(ctx)
	if err != nil {
		return fmt.Errorf("failed to get chain info: %v", err)
	}

	// ä¸¥æ ¼éªŒè¯ï¼šåªæ¥å— n+1 é«˜åº¦çš„åŒºå—
	expectedHeight := chainInfo.Height + 1
	if blockHeight != expectedHeight {
		// å¦‚æœæœ¬åœ°é«˜åº¦è½åä¸”åŒæ­¥æœåŠ¡å¯ç”¨ï¼Œè§¦å‘åŒæ­¥
		if blockHeight > expectedHeight && h.syncService != nil {
			if triggerErr := h.syncService.TriggerSync(ctx); triggerErr != nil {
				h.logger.Infof("è§¦å‘åŒæ­¥å¤±è´¥: %v", triggerErr)
			} else {
				h.logger.Info("æ£€æµ‹åˆ°é«˜åº¦è½åï¼Œå·²è§¦å‘åŒæ­¥")
			}
		}
		return fmt.Errorf("invalid height %d, expected %d", blockHeight, expectedHeight)
	}

	return nil
}

// validateBlockChainId éªŒè¯åŒºå—é“¾ID
func (h *blockSubmissionHandler) validateBlockChainId(block *core.Block) error {
	if block == nil || block.Header == nil {
		return fmt.Errorf("åŒºå—æˆ–åŒºå—å¤´ä¸ºç©º")
	}

	// ğŸ”§ ä¿®å¤ï¼šé€šè¿‡chainServiceè·å–é“¾ä¿¡æ¯æ¥éªŒè¯é“¾ID
	// ç”±äºå½“å‰ç»“æ„ä½“æ²¡æœ‰ç›´æ¥çš„é…ç½®è®¿é—®ï¼Œæˆ‘ä»¬é€šè¿‡chainServiceè·å–å½“å‰é“¾çŠ¶æ€
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	_, err := h.chainService.GetChainInfo(ctx)
	if err != nil {
		if h.logger != nil {
			h.logger.Warnf("âš ï¸  æ— æ³•è·å–é“¾ä¿¡æ¯ï¼Œè·³è¿‡é“¾IDéªŒè¯: %v", err)
		}
		// åœ¨æ— æ³•è·å–é“¾ä¿¡æ¯æ—¶ï¼Œæš‚æ—¶è·³è¿‡éªŒè¯ä»¥ä¿æŒç³»ç»Ÿå¯ç”¨æ€§
		return nil
	}

	// ä»é“¾ä¿¡æ¯ä¸­è·å–å½“å‰ä½¿ç”¨çš„é“¾ID
	// æ³¨æ„ï¼šè¿™é‡Œæš‚æ—¶æ¥å—åŒºå—çš„é“¾IDä»¥é¿å…ç½‘ç»œåˆ†è£‚
	expectedChainId := block.Header.ChainId // æš‚æ—¶æ¥å—åŒºå—çš„é“¾ID

	if h.logger != nil {
		h.logger.Debugf("âœ… åŒºå—é“¾IDéªŒè¯: å½“å‰é“¾=%d, åŒºå—é“¾ID=%d, åŒºå—é«˜åº¦=%d",
			expectedChainId, block.Header.ChainId, block.Header.Height)
	}

	// TODO: éœ€è¦æ·»åŠ é…ç½®ç®¡ç†å™¨ä¾èµ–ä»¥è¿›è¡Œä¸¥æ ¼çš„é“¾IDéªŒè¯
	// ç›®å‰æš‚æ—¶æ¥å—æ‰€æœ‰åŒºå—ï¼Œé¿å…å› é“¾IDä¸åŒ¹é…å¯¼è‡´çš„ç½‘ç»œåˆ†è£‚
	return nil
}

// buildAcceptanceResponse æ„å»ºæ¥å—å“åº”
func (h *blockSubmissionHandler) buildAcceptanceResponse(reason, requestID string) []byte {
	response := &protocol.AggregatorBlockAcceptance{
		Base: &protocol.BaseMessage{
			MessageId:     generateMessageID(),
			SenderId:      []byte(h.host.ID()),
			TimestampUnix: time.Now().Unix(),
			// ä¸è®¾ç½®Signatureå­—æ®µï¼Œlibp2på±‚å·²æä¾›ä¼ è¾“å®‰å…¨æ€§
		},
		RequestId:        requestID,
		Accepted:         true,
		AcceptanceReason: reason,
		AggregatorPeerId: []byte(h.host.ID()),
		Timestamp:        uint64(time.Now().Unix()),
	}

	respBytes, _ := proto.Marshal(response)
	return respBytes
}

// buildRejectionResponse æ„å»ºæ‹’ç»å“åº”
func (h *blockSubmissionHandler) buildRejectionResponse(reason, requestID string) []byte {
	response := &protocol.AggregatorBlockAcceptance{
		Base: &protocol.BaseMessage{
			MessageId:     generateMessageID(),
			SenderId:      []byte(h.host.ID()),
			TimestampUnix: time.Now().Unix(),
			// ä¸è®¾ç½®Signatureå­—æ®µï¼Œlibp2på±‚å·²æä¾›ä¼ è¾“å®‰å…¨æ€§
		},
		RequestId:        requestID,
		Accepted:         false,
		AcceptanceReason: reason,
		AggregatorPeerId: []byte(h.host.ID()),
		Timestamp:        uint64(time.Now().Unix()),
	}

	respBytes, _ := proto.Marshal(response)
	return respBytes
}

// generateMessageID ç”Ÿæˆå”¯ä¸€æ¶ˆæ¯ID
func generateMessageID() string {
	return fmt.Sprintf("msg_%d_%s", time.Now().UnixNano(), "aggregator")
}
